--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,40 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Crowdfunder</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<title>Crowdfunder</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <%= stylesheet_link_tag    "https://fonts.googleapis.com/css?family=Josefin+Sans:700|Libre+Baskerville" %>
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
-    <%= csrf_meta_tags %>
-  </head>
+		<%= stylesheet_link_tag    "https://fonts.googleapis.com/css?family=Josefin+Sans:700|Libre+Baskerville" %>
+		<%= stylesheet_link_tag    'application', media: 'all' %>
+		<%= javascript_include_tag 'application' %>
+		<%= csrf_meta_tags %>
+	</head>
 
-  <body>
-    <header class="site-header">
-      <h1 class="logo">Crowdfunder</h1>
+	<body>
+		<header class="site-header">
+			<h1 class="logo">Crowdfunder</h1>
 
-      <nav class="site-nav">
-        <% if current_user %>
-          <%= link_to "Logout", :logout, method: :delete %>
-        <% else %>
-          <%= link_to "Register", new_user_path %> |
-          <%= link_to "Login", :login %>
-        <% end %>
-      </nav>
-    </header>
+			<nav class="site-nav">
+				<% if current_user %>
+					<%= link_to "Logout", :logout, method: :delete %>
+				<% else %>
+					<%= link_to "Register", new_user_path %> |
+					<%= link_to "Login", :login %>
+				<% end %>
+			</nav>
 
-    <% flash.each do |key, message| %>
-      <div class="flash-<%= key %>"><%= message %></div>
-    <% end %>
+			<div class="error_explanation">
+				<% if flash.any? %>
+				<% flash.each do |key, value| %>
+				<h3 class="<%= key %>">
+					<%= value %>
+				</h3>
+				<% end %>
+				<% end %>
+			</div>
+		</header>
 
-    <main>
-      <%= yield %>
-    </main>
+		<% flash.each do |key, message| %>
+			<div class="flash-<%= key %>"><%= message %></div>
+		<% end %>
 
-    <footer class="site-footer">
-      <small>A Bitmaker assignment</small>
-    </footer>
-  </body>
+		<main>
+			<%= yield %>
+		</main>
+
+		<footer class="site-footer">
+			<small>A Bitmaker assignment</small>
+		</footer>
+	</body>
 </html>
