--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,30 +1,44 @@
 <%= form_for @user do |f| %>
-  <div class="field">
-     <%= f.label :first_name %><br />
-     <%= f.text_field :first_name %>
-  </div>
 
-  <div class="field">
-     <%= f.label :last_name %><br />
-     <%= f.text_field :last_name %>
-  </div>
+<div class="sign_up_error">
+	<%= form_for @user do |f| %>
+		<% if @user.errors.any? %>
+			<div id="error_explanation">
+				<h3>There are <%= @user.errors.count %> issues, please try again:</h3>
+				<ol>
+					<% @user.errors.full_messages.each do |msg| %>
+						<li><%= msg %></li>
+					<% end %>
+				</ol>
+			</div>
+		<% end %>
+		<% end %>
+	<div class="field">
+		 <%= f.label :first_name %><br />
+		 <%= f.text_field :first_name %>
+	</div>
 
-  <div class="field">
-     <%= f.label :email %><br />
-     <%= f.text_field :email %>
-  </div>
+	<div class="field">
+		 <%= f.label :last_name %><br />
+		 <%= f.text_field :last_name %>
+	</div>
 
-  <div class="field">
-     <%= f.label :password %><br />
-     <%= f.password_field :password %>
-  </div>
-  <div class="field">
-     <%= f.label :password_confirmation %><br />
-     <%= f.password_field :password_confirmation %>
-  </div>
+	<div class="field">
+		 <%= f.label :email %><br />
+		 <%= f.text_field :email %>
+	</div>
 
-  <div class="field">
-     <%= f.submit %>
-  </div>
+	<div class="field">
+		 <%= f.label :password %><br />
+		 <%= f.password_field :password %>
+	</div>
+	<div class="field">
+		 <%= f.label :password_confirmation %><br />
+		 <%= f.password_field :password_confirmation %>
+	</div>
+
+	<div class="field">
+		 <%= f.submit %>
+	</div>
 
 <% end %>
