--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
 	<body>
 		<header class="site-header">
-			<h1 class="logo">Crowdfunder</h1>
+			<h1 class="logo"><%= link_to 'Crowdfunder', root_path %></h1>
 
 			<nav class="site-nav">
 				<% if current_user %>
