--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -1,11 +1,19 @@
 .site-header {
-  text-align: center;
-  margin-bottom: 1rem;
+	text-align: center;
+	margin-bottom: 1rem;
 }
 
 .logo {
-  margin: 0;
-  text-align: center;
-  line-height: 50px;
-  font-size: 1.5rem;
+	margin: 0;
+	text-align: center;
+	line-height: 50px;
+	font-size: 1.5rem;
+}
+
+a {
+		text-decoration: none;
+}
+
+header.site-header {
+		background-color: lightblue;
 }
