--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 				<% if current_user %>
 					<%= link_to "Logout", :logout, method: :delete %>
 				<% else %>
-					<%= link_to "Register", new_user_path %> |
+					<%= link_to "Register", new_user_path %>
 					<%= link_to "Login", :login %>
 				<% end %>
 			</nav>
