--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -1,22 +1,31 @@
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 html {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+	max-width: 100%;
+	height: auto;
 }
 
 figure {
-  margin: 0;
+	margin: 0;
 
-  & > img {
-    display: block;
-  }
+	& > img {
+		display: block;
+	}
+}
+
+body {
+	background-color: lavenderblush;
+	text-align: center;
+}
+
+a:hover {
+	color: grey;
 }
