Search bar added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,11 @@
 		</main>
 
 		<footer class="site-footer">
+			<STRONG>JuHang Sin | Lia Forgione | Roopesh Rattan</STRONG>
+			<br>
 			<small>A Bitmaker assignment</small>
+
+
 		</footer>
 	</body>
 </html>
