--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -29,6 +29,8 @@
 
 <%= link_to "Add new reward", new_project_reward_path(@project) %>
 
+<h4>New Comments</h4>
+
 <%= render 'form', comment: @comment %>
 
 <div class="Comments">
