made a minor change - still updating other parts and correcting errors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
 		<footer class="site-footer">
 			<STRONG>JuHang Sin | Lia Forgione | Roopesh Rattan</STRONG>
 			<br>
-			<small>A Bitmaker assignment</small>
+			<small>A Bitmaker Assignment</small>
 
 
 		</footer>
